Merge master branch into ignite-12963